# app/Http/Resources/UserEducation/UserEducationResource.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Http\Resources\UserEducation;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class UserEducationResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return parent::toArray($request);
+    }
+}
