# routes/apiRoutes/profile.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\API\Profile\PersonalInfoController;
 use App\Http\Controllers\API\Profile\UserCertificationController;
+use App\Http\Controllers\API\Profile\UserEducationController;
 use App\Http\Controllers\API\Profile\UserExperienceController;
 use Illuminate\Support\Facades\Route;
 
@@ -60,5 +61,10 @@ Route::group(
                 ->name('updateCertification');
 
             Route::delete('/', [UserCertificationController::class, 'destroy'])->name('destroy');
+        });
+
+        Route::group(['prefix' => 'user-education', 'as' => 'userEducation.'], function() {
+            Route::get('/list-education-current-user', [UserEducationController::class,
+                'getListEducationCurrentUser'])->name('ListEducationCurrentUser');
         });
 });
